alignment fix and link

--- a/bb-theme-child/assets/css/partials/_store.scss
+++ b/bb-theme-child/assets/css/partials/_store.scss
@@ -13,6 +13,13 @@
 		background: $color--primary !important;
 		a {
 			color: #FFF;
+			margin: 0;
+			@media (max-width: 768px) {
+				margin-top: 10px;
+			}
+			&:hover {
+				color: #FFF;
+			}
 		}
 	}
 	.woocommerce-error {
